--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ceco",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
